--- a/app/src/main/res/layout/activity_view_orders_a.xml
+++ b/app/src/main/res/layout/activity_view_orders_a.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewOrdersA">
+    tools:context=".ViewOrdersA"
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar"/>
 
     <ListView
         android:layout_width="match_parent"
