--- a/app/src/main/res/layout/driver_select_a.xml
+++ b/app/src/main/res/layout/driver_select_a.xml
@@ -124,6 +124,14 @@
                     android:text="Assign">
                 </Button>
 
+                <Button
+                    android:id="@+id/request"
+                    android:layout_width="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_height="wrap_content"
+                    android:text="Request">
+                </Button>
+
             </LinearLayout>
         </RelativeLayout>
 
