--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -14,7 +14,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
         android:text="WELCOME"
-        android:textColor="@android:color/background_light"
+        android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold" />
 
